# wandexer

./: .gitignore  Makefile  README.md  setup.cfg
dex/: doc.json  let.json  let179.normal.txt  main.c
dex-c/: .gitignore  Makefile  doc.json  introII.txt  main.c
dex-rust/: Cargo.toml
dex-rust/src/: main.rs
indexer/: config.yml  index.py
