[metadata]
name = wandexer
version = 1.0.2
description = "index annorepo container to elastic index"
long_description = file README.md
author = Hayco de Jong
author_email = hayco.de.jong@di.huc.knaw.nl
license = GPLv3-only
url = https://github.com/knaw-huc/peen-indexer

classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    text

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =
    wheel
    annorepo-client
    elasticsearch==8.17.2
    loguru
    pyyaml
    requests

packages = 
    indexer

[options.entry_points]
console_scripts = 
    wandexer = indexer.index:cli

[options.exclude_package_data]
* =
    peen-indexer.egg-info
    __pycache__
    .DS_Store
    docs
    tests
