[package]
name = "huc-tapir"
version = "0.1.0"
edition = "2024"
authors = ["Hayco de Jong <hayco.de.jong@di.huc.knaw.nl>"]
description = "Text & Annotation Processor for Indexing Resources"
documentation = "https://github.com/knaw-huc/wandexer"
homepage = "https://knaw-huc.github.io/wandexer"
include = ["src/**/*","tests/**","LICENSE","README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/knaw-huc/wandexer"
keywords = ["web-annotation", "text", "indexing"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "tapir"
path = "src/main.rs"
doc = false
